# DisGauss-and-HRTM-models

dgm-hrtm/: LICENSE  README.md  demo_batch_api.py  pyproject.toml
dgm-hrtm/examples/: example_batch_api.py
dgm-hrtm/src/dgm_hrtm/: __init__.py  cli.py  runner.py
dgm-hrtm/src/dgm_hrtm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
dgm-hrtm/src/dgm_hrtm/configs/: __init__.py  mapbox_config.py  simulation_config.py
dgm-hrtm/src/dgm_hrtm/data/: __init__.py  dcf_public.json  dcf_workers.json  hrtm_subjects_breathing.json  radionuclidos.csv
dgm-hrtm/src/dgm_hrtm/dissgausspy/: __init__.py  lib_ModelDissGauss.py
dgm-hrtm/src/dgm_hrtm/functions/: __init__.py  func_hrtm.py  func_hrtm_deposition.py  func_main.py  func_utils_map.py  func_utils_meteo.py  func_utils_printeos.py
dgm-hrtm/src/dgm_hrtm/hrtm/: __init__.py  lib_HRTM.py
